--- a/connectfour/views/web/static/stylesheets/src/styles.sass
+++ b/connectfour/views/web/static/stylesheets/src/styles.sass
@@ -4,20 +4,22 @@
 
 $base-font-size: 16px
 $base-font-family: "Lora", "Palatino Linotype", Palatino, serif
-$body-padding: 5vmin
+$body-padding: 2.5%
 $whitespace: 40px
 
+// Colors
+$white: snow
 $pale-gray: gainsboro
 $dark-gray: dimgray
-$background-color: lighten(cornflowerblue, 5%)
-$error-color: firebrick
+$yellow: gold
 
+$background-color: lighten(cornflowerblue, 5%)
 $button-color: slateblue
 $button-hover: darkslateblue
 $button-disabled: lighten($button-color, 20%)
+$error-color: firebrick
 
-$white: snow
-$yellow: gold
+// Game disc colors
 $black: black
 $red: crimson
 $blue: royalblue
