--- a/connectfour/views/web/static/stylesheets/src/font.sass
+++ b/connectfour/views/web/static/stylesheets/src/font.sass
@@ -4,11 +4,12 @@ body
 
 
 h1
-  font-size: 64px
-  color: $white
-  text-align: center
   font-family: "Raleway", sans-serif
+  font-size: 64px
   letter-spacing: 1px
+  line-height: 0.8
+  text-align: center
+  color: $white
 
 
 h2
