--- a/connectfour/web/static/stylesheets/src/elements.sass
+++ b/connectfour/web/static/stylesheets/src/elements.sass
@@ -9,6 +9,9 @@ input
   border-radius: 1px
   background: $pale-gray
 
+  &:disabled
+    color: lighten($base-font-color, 55%)
+
 
 button
   padding: 8px 12px
