--- a/connectfour/web/static/stylesheets/src/styles.sass
+++ b/connectfour/web/static/stylesheets/src/styles.sass
@@ -14,10 +14,12 @@ $dark-gray: dimgray
 $yellow: gold
 
 $background-color: lighten(cornflowerblue, 5%)
+$base-font-color: black
+$error-color: firebrick
+
 $button-color: slateblue
 $button-hover: darkslateblue
 $button-disabled: lighten($button-color, 20%)
-$error-color: firebrick
 
 // Game disc colors
 $black: black
