Modernize webpack stuff

--- a/connectfour/web/templates/head.html
+++ b/connectfour/web/templates/head.html
@@ -21,7 +21,7 @@
   <link
     type="text/css"
     rel="stylesheet"
-    href="{{ url_for('static', filename='stylesheets/bin/styles.css') }}">
+    href="{{ url_for('static', filename='dist/main.css') }}">
 
   <script type="text/javascript">
     window.DEFAULT_ROWS = {{ DEFAULT_ROWS }};
@@ -31,7 +31,7 @@
 
   <script
     type="text/javascript"
-    src="{{ url_for('static', filename='js/bin/connectfour.bundle.js') }}"
+    src="{{ url_for('static', filename='dist/main.js') }}"
     defer>
   </script>
 </head>
